<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="btn_list" >VIEW LIST</string>
    <string name="btn_add" >ADD RECORD</string>
    <string name="btn_view" >VIEW RECORD</string>
    <string name="btn_edit" >EDIT RECORD</string>
    <string name="btn_delete" >DELETE RECORD</string>
    <string name="btn_back" >GO BACK</string>
    <string name="btn_ok" >OK</string>
    <string name="lbl_id" >ID</string>
    <string name="hnt_id" >Enter Student ID</string>

    <string name="lbl_list_view" >STUDENT LIST</string>
    <string name="lbl_stud_name" >Name</string>
    <string name="lbl_stud_course" >Course</string>

    <string name="hnt_stud_name" >Enter Student Name</string>
    <string name="hnt_stud_course" >Enter Student Course</string>

</resources>
